--- a/config/3800.config
+++ b/config/3800.config
@@ -35,7 +35,7 @@ CONFIG_TARGET_ar71xx_generic_DEVICE_wndr3800=y
 # CONFIG_PACKAGE_luci-app-wol is not set #网络唤醒
 # CONFIG_PACKAGE_luci-app-control-mia is not set #时间控制
 # CONFIG_PACKAGE_luci-app-control-timewol is not set #定时唤醒
-# CONFIG_PACKAGE_luci-app-control-webrestriction is not set #访问限制
+# CONFIG_PACKAGE_luci-app-control-webrestriction is not set #访问限
 # CONFIG_PACKAGE_luci-app-control-weburl is not set #网址过滤
 # CONFIG_PACKAGE_luci-app-zerotier is not set #ZeroTier内网穿透
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set #访问时间控制
