--- a/config/r7800.config
+++ b/config/r7800.config
@@ -21,7 +21,7 @@ CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-oaf=y #应用过滤
 # CONFIG_PACKAGE_luci-app-serverchan is not set #微信推送
 CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardHome去广告服务
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set #解锁网易云灰色歌曲
+# CONFIG_PACKAGE_luci-app-unblockmusic is not set #解锁网易云灰色歌
 # CONFIG_UnblockNeteaseMusic_Go is not set #解锁网易云灰色歌曲
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_shadowsocks-libev-ss-server is not set is not set
