--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -358,7 +358,7 @@ CONFIG_PACKAGE_rtl8822ce-firmware=y
 CONFIG_PACKAGE_wl12xx-firmware=y
 CONFIG_PACKAGE_wl18xx-firmware=y
 
-# Luci
+# Luci 插件
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-amule=y
