--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -151,7 +151,7 @@ CONFIG_PACKAGE_kmod-video-pwc=y
 CONFIG_PACKAGE_kmod-video-uvc=y
 CONFIG_PACKAGE_kmod-video-videobuf2=y
 
-# USB Suppport
+# USB 支持
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-audio=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
