--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -459,7 +459,7 @@ CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-material=y
 
-# Network
+# Network网络
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_rsync=y
