--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -112,41 +112,26 @@ jobs:
         [ -s DEVICE_NAME ] && echo "::set-env name=DEVICE_NAME::_$(cat DEVICE_NAME)"
         echo "::set-env name=FILE_DATE::_$(date +"%Y%m%d%H%M")"
         
-    - name: Check space usage
-      if: (!cancelled())
-      run: df -hT
-
-    - name: Upload bin directory
-      uses: actions/upload-artifact@main
+    - name: 上传BIN目录
+      uses: actions/upload-artifact@master
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_bin
         path: openwrt/bin
 
     - name: 整理文件
       id: organize
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
-        mv openwrt/.config openwrt/bin/targets/*/*
-        cd openwrt/bin/targets/*/*
-        rm -rf packages
-        rm -rf *uImage
-        echo "::set-env name=FIRMWARE::$PWD"
-        echo "::set-output name=status::success"
-
-    - name: 生成标签
-      id: tag
-      if: steps.compile.outputs.status == 'success' && env.CREATE_RELEASE == 'true' && !cancelled()
-      run: |
-        echo ::set-env name=RELEASE_TAG::"Uola-${{ env.DEVICE_NAME }}-${{ env.RELEASE_DATE }}"
-        echo "::set-output name=status::success"
-
-    - name: 上传下载地址文件
+          rm -rf ./artifact/
+          mkdir -p ./artifact/
+          find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+          find openwrt/bin/targets/ -name "*uefi*img*" | xargs -i mv -f {} ./artifact/
+    - name: 上传固件
       uses: actions/upload-artifact@master
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_TMP_LINK == 'true' && !cancelled()
       with:
-        name: ${{ env.DOWNLOAD_URL_FILE }}
-        path: openwrt/bin/targets/${{ env.TARGET }}/${{ env.SUBTARGET }}/${{ env.DOWNLOAD_URL_FILE }}
+        name: OpenWrt_firmware
+        path: ./artifact/
     
 
     - name: Upload firmware to cowtransfer
