--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -183,7 +183,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
-# Virtualization
+# 虚拟化
 CONFIG_PACKAGE_kmod-irqbypass=y
 CONFIG_PACKAGE_kmod-kvm-amd=y
 CONFIG_PACKAGE_kmod-kvm-intel=y
