--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -112,12 +112,11 @@ jobs:
         [ -s DEVICE_NAME ] && echo "::set-env name=DEVICE_NAME::_$(cat DEVICE_NAME)"
         echo "::set-env name=FILE_DATE::_$(date +"%Y%m%d%H%M")"
         
-    - name: 上传BIN目录
-      uses: actions/upload-artifact@master
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
-      with:
-        name: OpenWrt_bin
-        path: openwrt/bin
+    - name: Check space usage
+      if: (!cancelled())
+      run: df -hT
+
+        
 
     - name: 整理文件
       id: organize
@@ -127,13 +126,19 @@ jobs:
           mkdir -p ./artifact/
           find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
           find openwrt/bin/targets/ -name "*uefi*img*" | xargs -i mv -f {} ./artifact/
+
+    - name: 上传BIN目录
+      uses: actions/upload-artifact@master
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: OpenWrt_bin
+        path: openwrt/bin
     - name: 上传固件
       uses: actions/upload-artifact@master
       with:
         name: OpenWrt_firmware
         path: ./artifact/
     
-
     - name: Upload firmware to cowtransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
       run: |
