--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -189,7 +189,7 @@ CONFIG_PACKAGE_kmod-kvm-amd=y
 CONFIG_PACKAGE_kmod-kvm-intel=y
 CONFIG_PACKAGE_kmod-kvm-x86=y
 
-# USB Serial
+# USB Serial驱动
 CONFIG_PACKAGE_kmod-usb-serial-ch341=y
 CONFIG_PACKAGE_kmod-usb-serial-cp210x=y
 CONFIG_PACKAGE_kmod-usb-serial-dmx_usb_module=y
