--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -546,7 +546,7 @@ CONFIG_QEMU_UI_VNC_JPEG=y
 CONFIG_QEMU_UI_VNC_PNG=y
 CONFIG_QEMU_UI_VNC_SASL=y
 
-# 3G/4G Support
+# 3G/4G Support驱动
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-option=y
 CONFIG_PACKAGE_kmod-usb-serial-wwan=y
