--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -96,7 +96,7 @@ CONFIG_PACKAGE_kmod-via-rhine=y
 CONFIG_PACKAGE_kmod-via-velocity=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
 
-# Video/Camera Support
+# Video/Camera Support摄像机支持
 CONFIG_PACKAGE_kmod-i2c-core=y
 CONFIG_PACKAGE_kmod-backlight=y
 CONFIG_PACKAGE_kmod-backlight-pwm=y
