--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -21,8 +21,8 @@ on:
       - 'config/x86_64.config'
   schedule:
     - cron: 0 18 * * *
-  watch:
-    types: started
+#  watch:
+#    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
